# vaihde

./: .pre-commit-config.yaml  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/vaihde/: cli.py  config.py  excs.py  ops.py
tests/: test_vaihde.py
